<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_income"
        android:name="com.example.expensetracker.ui.income.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />

    <fragment
        android:id="@+id/nav_expense"
        android:name="com.example.expensetracker.ui.expense.ExpenseFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_expense" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.example.expensetracker.ui.budget.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_expense_summary"
        android:name="com.example.expensetracker.ui.expensesummary.ExpenseSummaryFragment"
        android:label="@string/expense_summary"
        tools:layout="@layout/fragment_expense_summary" />

    <fragment
        android:id="@+id/nav_expense_comparison"
        android:name="com.example.expensetracker.ui.expensecomparison.ExpenseComparisonFragment"
        android:label="@string/expense_comparison"
        tools:layout="@layout/fragment_expense_comparison" />

</navigation>