<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/baseline_money_off_24"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/baseline_account_balance_wallet_24"
            android:title="@string/menu_budget" />
    </group>
</menu>